# Django

./: .gitignore  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0002_user_provider.py  0003_remove_user_provider.py
config/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0002_category_comment_postcategory.py  0002_image.py
