[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["eunsu02 <regulus_leo08@naver.com>"]
readme = "README.md"
packages = [{include = "django_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
django-allauth = "^65.3.1"
requests = "^2.32.3"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
